test/invalid-syntax/58182_non_capitalized_int/non_capitalized_int.agu
-- Author: 58182, Gabriel Henriques

let lexError : int = 123